# Computer-Science

./: .gitignore  CMakeLists.txt  README.md
1 Semestre/Algoritmos e Técnicas de Programação I/: produto loop.c  produto_loop2.c
1º Semestre/ATP I/: 4-15iv.c  4-15v.c  5-12.c  5-8.c
1º Semestre/Algoritmos e Técnicas de Programação I/: 4-14.c  4-15i.c  4-15iii.c  5-2.c  5-24.c  5-25.c  7-8.c  mais_alto.c
2 Semestre/Algoritmos e Técnicas de Programação II/: concha.c  novo_dicionario.c  romanos.c
2 Semestre/Cálculo II/: Trabalho.ipynb
2º Semestre/ATP II/: dicionario.c  hanoi_diferente.c  minimos.c
2º Semestre/Algoritmos e Técnicas de Programação II/: confusa.c
2º Semestre/Cálculo II/: README.md
4 Semestre/Cálculo Numérico/: DecomposiçãoLU.py  GaussCompacto.py
4 Semestre/Laboratório de Linguagens de Montagem/: trabalho.asm
4 Semestre/Probabilidade & Estatística/: web-qa.py
4º Semestre/Cálculo Numérico/: DecomposiçãoGT.py  texte.py
4º Semestre/Estrutura de Dados II/: filmes.h  indices.c  indices.h  main.c  (+2 more)
ATP I/: 4-14.c  4-15i.c  4-15iii.c  4-15iv.c  4-15v.c  5-28.c  6-14.3.c  MouF.c  fatorial.c  hotel.c  mais_alto.c  produto loop.c  produto.c  produto_loop2.c
ATP II/: busca.c  concha.c  confusa.c  dicionario.c  fila_idosos.c  galáxia.c  hanoi_diferente.c  labirinto.c  longest_job.c  longets_job.c  minimos.c  movimentos.c  novo_dicionario.c  palindromeio.c  planeta.c
Lab. ATP I/: conversor_fahrenheit_celsius.c  energia.c  inverter_número.c  área_circunferência.c
Lab. ATP II/: lab10.c  lab2.c  lab3.c  lab4.c  lab5.c  lab6.c  lab7.c  lab8.c  lab9.c
(+191 files in other folders)
